# neoSeaSHell

./: CMakeLists.txt  README.md
.github/workflows/: c.yml
src/: main.c
src/corelib/: core.h  expander.c  handle.c  hist.c  log.c  proc.c  resolver.c  term.c
src/include/: control_seq.h  status.h
